add content header

--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <h1>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
+        enim exercitationem blanditiis. Tempora doloribus corrupti culpa iste
+        quidem adipisci excepturi dignissimos animi quam, modi repudiandae unde
+        amet autem ex libero totam itaque aliquam nesciunt veritatis debitis
+        delectus earum. Provident culpa facere ullam facilis necessitatibus
+        eveniet praesentium officia ipsum. Tempore, quisquam!
+      </h1>
+    </header>
+  </body>
 </html>
