--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <footer>
+      <h1>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat labore
+        saepe enim corporis asperiores dolor aperiam itaque eum inventore ipsum,
+        sequi nulla soluta illo libero quo recusandae sed officiis? Numquam!
+      </h1>
+      <a href="#">lorem</a>
+      <a href="#">lorem</a>
+      <a href="#">lorem</a>
+      <a href="#">lorem</a>
+      <a href="#">lorem</a>
+    </footer>
+  </body>
 </html>
